--- a/Votacio/index.html
+++ b/Votacio/index.html
@@ -45,6 +45,15 @@
                                 <p>Recull idees i després vota les millors.</p>
                             </div>
                         </div>
+                        <div class="cc-credit">
+                            <img src="CC_BY-NC-SA.svg" alt="Creative Commons BY-NC-SA">
+                            <span class="credit-text">
+                                Aplicació creada per Felip Sarroca
+                                <a href="https://jjdeharo.github.io/directo/" target="_blank" rel="noopener noreferrer">a partir d'una proposta</a>
+                                de
+                                <a href="https://educacion.bilateria.org/" target="_blank" rel="noopener noreferrer">Juanjo de Haro</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
 
@@ -64,16 +73,6 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
-        <img src="CC_BY-NC-SA.svg" alt="Creative Commons BY-NC-SA">
-        <span class="credit-text">
-            Aplicació creada per Felip Sarroca
-            <a href="https://jjdeharo.github.io/directo/" target="_blank" rel="noopener noreferrer">a partir d'una proposta</a>
-            de
-            <a href="https://educacion.bilateria.org/" target="_blank" rel="noopener noreferrer">Juanjo de Haro</a>
-        </span>
-    </footer>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.4.7/peerjs.min.js"></script>
     <script src="script.js"></script>
 </body>
