--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -20,8 +20,25 @@
             </div>
         </div>
         <form id="config-form">
-            <div id="config-fields" class="form-fields">
-                <!-- Els camps del formulari es generaran aquí dinàmicament -->
+            <div class="config-layout">
+                <section class="panel primary-panel">
+                    <div id="primary-stack" class="panel-stack">
+                        <!-- Contingut principal -->
+                    </div>
+                </section>
+                <section class="panel secondary-panel">
+                    <div id="secondary-stack" class="panel-stack">
+                        <!-- Recursos i opcions -->
+                    </div>
+                </section>
+            </div>
+            <div class="config-footer">
+                <div id="config-summary" class="summary-card">
+                    <!-- Resum de configuració -->
+                </div>
+                <div id="footer-actions" class="footer-actions">
+                    <!-- Botons d'acció -->
+                </div>
             </div>
         </form>
     </div>
