--- a/Votacio/config.html
+++ b/Votacio/config.html
@@ -20,9 +20,11 @@
             </div>
         </div>
         <form id="config-form">
-            <div id="config-fields" class="form-fields">
-                <!-- Els camps del formulari es generaran aquí dinàmicament -->
+            <div class="config-grid">
+                <div id="primary-column" class="config-column primary-column"></div>
+                <div id="secondary-column" class="config-column secondary-column"></div>
             </div>
+            <div id="config-actions" class="config-actions"></div>
         </form>
     </div>
     <script src="config.js"></script>
