--- a/Votacio/activity.html
+++ b/Votacio/activity.html
@@ -38,12 +38,11 @@
                 <p id="phase-description">Configurant la sessió...</p>
             </div>
             <button id="close-activity-btn" class="control-btn danger-btn hidden"><i class="fa-solid fa-power-off"></i> Tanca l'activitat</button>
+            <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votació</button>
         </aside>
     </main>
 
-    <footer id="activity-controls" class="hidden">
-        <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votació</button>
-    </footer>
+    <footer id="activity-controls" class="hidden"></footer>
 
     <!-- Aquesta secció és per a la interacció de l'alumne -->
     <div id="student-interaction-zone" class="hidden">
