--- a/Participem/activity.html
+++ b/Participem/activity.html
@@ -23,7 +23,7 @@
         <aside class="live-sidebar">
             <div class="sidebar-card">
                 <h2>Panell ràpid</h2>
-                <p>Comparteix aquest codi amb l'alumnat i segueix l'activitat en directe.</p>
+                <p>Comparteix aquest codi amb els participants i segueix l'activitat en directe.</p>
                 <div class="sidebar-highlight sidebar-code">
                     <span class="label">Codi</span>
                     <span id="session-code-large">----</span>
