--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.1"></script>
 </body>
 </html>
