--- a/Participem/activity.html
+++ b/Participem/activity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activitat en directe</title>
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' fill='%234a90e2'/%3E%3Cpath fill='%23ffffff' d='M18 34h28v6H18zm0-10h28v6H18z'/%3E%3C/svg%3E">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="activity.css">
 </head>
@@ -23,7 +23,7 @@
         <aside class="live-sidebar">
             <div class="sidebar-card">
                 <h2>Panell ràpid</h2>
-                <p>Comparteix aquest codi amb l'alumnat i segueix l'activitat en directe.</p>
+                <p>Comparteix aquest codi amb els participants i segueix l'activitat en directe.</p>
                 <div class="sidebar-highlight sidebar-code">
                     <span class="label">Codi</span>
                     <span id="session-code-large">----</span>
@@ -37,7 +37,6 @@
                 <h3>Fase actual</h3>
                 <p id="phase-description">Configurant la sessió...</p>
             </div>
-            <button id="close-activity-btn" class="control-btn danger-btn hidden"><i class="fa-solid fa-power-off"></i> Tanca l'activitat</button>
             <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votació</button>
         </aside>
     </main>
