--- a/Participem2/activity.html
+++ b/Participem2/activity.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
@@ -18,11 +18,11 @@
 
     <main class="live-layout">
         <section id="live-results-container" class="live-feed">
-            <!-- Els resultats din‡mics aniran aquÌ -->
+            <!-- Els resultats din√†mics aniran aqu√≠ -->
         </section>
         <aside class="live-sidebar">
             <div class="sidebar-card">
-                <h2>Panell r‡pid</h2>
+                <h2>Panell r√†pid</h2>
                 <p>Comparteix aquest codi amb els participants i segueix l'activitat en directe.</p>
                 <div class="sidebar-highlight sidebar-code">
                     <span class="label">Codi</span>
@@ -35,15 +35,15 @@
             </div>
             <div class="sidebar-card" id="phase-card">
                 <h3>Fase actual</h3>
-                <p id="phase-description">Configurant la sessiÛ...</p>
+                <p id="phase-description">Configurant la sessi√≥...</p>
             </div>
-            <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votaciÛ</button>
+            <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votaci√≥</button>
         </aside>
     </main>
 
     <footer id="activity-controls" class="hidden"></footer>
 
-    <!-- Aquesta secciÛ Ès per a la interacciÛ de l'alumne -->
+    <!-- Aquesta secci√≥ √©s per a la interacci√≥ de l'alumne -->
     <div id="student-interaction-zone" class="hidden">
         <h2 id="student-question" class="student-question hidden"></h2>
         <form id="idea-form">
@@ -54,13 +54,9 @@
         <div id="poll-options-container">
             <p id="votes-left-info"></p>
             <div id="vote-cards-wrapper">
-                <!-- Les targetes de votaciÛ de l'alumne aniran aquÌ -->
+                <!-- Les targetes de votaci√≥ de l'alumne aniran aqu√≠ -->
             </div>
             <button id="submit-votes-btn" class="hidden">Envia vots</button>
-        </div>
-        <div id="stars-score-container" class="stars-score-container hidden">
-            <div id="stars-category-wrapper" class="stars-category-wrapper"></div>
-            <button id="submit-stars-btn" type="button" class="hidden">Enviar puntuacions</button>
         </div>
     </div>
 
