--- a/Participem/activity.html
+++ b/Participem/activity.html
@@ -22,7 +22,7 @@
         </section>
         <aside class="live-sidebar">
             <div class="sidebar-card">
-                <h2>Panell ràpid</h2>
+                <h2>Panell r&agrave;pid</h2>
                 <p>Comparteix aquest codi amb els participants i segueix l'activitat en directe.</p>
                 <div class="sidebar-highlight sidebar-code">
                     <span class="label">Codi</span>
