--- a/Participem/activity.html
+++ b/Participem/activity.html
@@ -18,10 +18,10 @@
 
     <main class="live-layout">
         <section id="live-results-container" class="live-feed">
-            <!-- Els resultats dinàmics aniran aquí -->
+            <!-- Els resultats din&agrave;mics aniran aqu&iacute; -->
         </section>
         <aside class="live-sidebar">
-            <div class="sidebar-card">
+            <div class="sidebar-card quick-panel">
                 <h2>Panell r&agrave;pid</h2>
                 <p>Comparteix aquest codi amb els participants i segueix l'activitat en directe.</p>
                 <div class="sidebar-highlight sidebar-code">
@@ -35,15 +35,15 @@
             </div>
             <div class="sidebar-card" id="phase-card">
                 <h3>Fase actual</h3>
-                <p id="phase-description">Configurant la sessió...</p>
+                <p id="phase-description">Configurant la sessi&oacute;...</p>
             </div>
-            <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votació</button>
+            <button id="start-voting-btn" class="control-btn hidden"><i class="fa-solid fa-play"></i> Inicia la votaci&oacute;</button>
         </aside>
     </main>
 
     <footer id="activity-controls" class="hidden"></footer>
 
-    <!-- Aquesta secció és per a la interacció de l'alumne -->
+    <!-- Aquesta secci&oacute; &eacute;s per a la interacci&oacute; de l'alumne -->
     <div id="student-interaction-zone" class="hidden">
         <h2 id="student-question" class="student-question hidden"></h2>
         <form id="idea-form">
@@ -54,7 +54,7 @@
         <div id="poll-options-container">
             <p id="votes-left-info"></p>
             <div id="vote-cards-wrapper">
-                <!-- Les targetes de votació de l'alumne aniran aquí -->
+                <!-- Les targetes de votaci&oacute; de l'alumne aniran aqu&iacute; -->
             </div>
             <button id="submit-votes-btn" class="hidden">Envia vots</button>
         </div>
