--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
         <!-- Les seccions i targetes de les apps es generaran aquí amb JavaScript -->
     </main>
 
-    <footer class="container text-center py-4 mt-5 border-top">
-        <p class="mb-1">Aplicacions creades per Felip Sarroca amb l'assistència de la IA</p>
-        <p>
-            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ca" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-muted">
+    <footer class="container py-4 mt-5 border-top">
+        <div class="d-flex justify-content-center align-items-center flex-wrap footer-license">
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ca" target="_blank" rel="noopener noreferrer">
                 <img src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png" alt="Llicència Creative Commons" class="license-icon">
-                Obres sota llicència CC BY-NC-SA 4.0
             </a>
-        </p>
+            <div class="footer-text text-center text-md-start">
+                <p class="mb-1">Aplicacions creades per <a href="https://ja.cat/felipsarroca" target="_blank" rel="noopener noreferrer" class="text-primary fw-semibold">Felip Sarroca</a> amb l'assistència de la IA</p>
+                <p class="mb-0">
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ca" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-muted">Obres sota llicència CC BY-NC-SA 4.0</a>
+                </p>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js?v=1.1"></script>
