--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png" alt="Llicència Creative Commons" class="license-icon">
             </a>
             <div class="footer-text text-center text-md-start">
-                <p class="mb-1">Aplicacions creades per <a href="https://ja.cat/felipsarroca" target="_blank" rel="noopener noreferrer" class="text-primary fw-semibold">Felip Sarroca</a> amb l'assistència de la IA</p>
+                <p class="mb-1">Aplicacions creades per <a href="https://ja.cat/felipsarroca" target="_blank" rel="noopener noreferrer" class="author-link text-primary fw-semibold">Felip Sarroca</a> amb l'assistència de la IA</p>
                 <p class="mb-0">
                     <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ca" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-muted">Obres sota llicència CC BY-NC-SA 4.0</a>
                 </p>
